Fixed some more stuff
